[package]
name = "stellar-rpc-client"
description = "Stellar RPC client for rust"
homepage = "https://github.com/stellar/soroban-rpc"
repository = "https://github.com/stellar/soroban-rpc"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version = "21.4.0"
edition = "2021"
rust-version = "1.74.0"
autobins = false


[lib]
crate-type = ["rlib"]


[dependencies]
stellar-strkey = "0.0.8"
stellar-xdr = { version = "=21.2.0", features = ["curr", "std", "serde", "base64"] }


termcolor = "1.1.3"
termcolor_output = "1.0.1"
clap = { version = "4.5.11", features = ["derive"] }
serde_json = "1.0.109"
serde-aux = "4.5.0"
itertools = "0.13.0"
hex = "0.4.3"
thiserror = "1.0.46"
serde = "1.0.193"
tokio = "1.39.2"
sha2 = "0.10.7"
tracing = "0.1.40"

# networking
jsonrpsee-http-client = "0.22.5"
jsonrpsee-core = "0.22.5"
http = "1.1.0"
